Put basic html structure into homework folder in the index.html file with my name in title under header area

--- a/Homework/index.html
+++ b/Homework/index.html
@@ -1,2 +1,12 @@
-Robert Campbell
-List of links to assignments
+<!DOCTYPE html>
+<html>
+
+  <head>
+    <title>Robert Campbell: </title>
+  </head>
+
+<body>
+  <title
+
+</body>
+</html>
