--- a/a2/index.html
+++ b/a2/index.html
@@ -3,9 +3,178 @@
 
   <head>
     <title>Assignment 2: </title>
+    <meta name="description" content="This is important because...jobs and stuff" />
+    <meta name="author" content="anonymous" />
   </head>
 
+
 <body>
+  <h1> <p align="center">Bobby Campbell</p>
+  </h1>
+
+  <p><img src="images/IMG_4862.jpg" alt="ME" width="100" height="100" align="centered" />
+  </p>
+
+  <address align="center">
+    <a href="https://www.bcampbellmusic.com/">www.bcampbellmusic.com</a> | 862-377-4324 | <a href="mailto:bobbycampbell.music@gmail.com">bobbycampbell.music@gmail.com </a>
+  </address>
+
+  <h3> <p align="left"><b>EDUCATION</b> </p> </h3>
+  <hr>
+
+  <table>
+    <tr>
+      <th>
+      <p align="left"><b>University of Miami: Frost School of Music, Coral Gables, Florida | GPA: 3.981</b> &nbsp;&nbsp;&nbsp;&nbsp;
+      &nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;
+      &nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;
+      &nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;
+      &nbsp;&nbsp;&nbsp;&nbsp;</th>
+      <th>
+      <p align="right"><i>Graduation: 05/2020</i></p> </th>
+    </tr>
+  </table>
+
+    <p align="left">Bachelor of Music Candidate <br>
+    Media Writing and Production, Performance Certificate in Classical Guitar, Minor in Music Business <br> </p>
+<!-- Review later for CSS alignment/positioning for dates on same horizontal line-->
+
+      <ul>
+        <li> <b>Honors:</b> President’s Music Scholarship, Recipient of Jazz Solo Award, Lakeland Bank Scholarship, Semper Fidelis Award for Musical Excellence.
+        <li> <b>Relevant Coursework:</b> Wrote/Recorded/Produced original works mirroring/emulating the compositional styles and recording techniques of musical decades from the 1950’s to 2000’s and current popular music.
+        <li> <b>Guitar Instruction:</b> Carol Hamersma (05/2014- 10/2015), Maestro Rafael Padron (09/2016- Present)
+      </ul>
+
+  <h3> <p align="left"><b>ACTIVITIES/AFFILIATIONS</b> </p> </h3>
+  <hr>
+
+    <p align="left"><b>Hurricane Productions: Patio Jams, University of Miami </b>
+
+<!-- dont fuck this us-->
+  <table>
+    <tr>
+      <th>
+      <p align="left"><b>Patio Jams Chair</b> &nbsp;&nbsp;&nbsp;&nbsp;
+      &nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;
+      &nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;
+      &nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;
+      &nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;
+      &nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;
+      &nbsp;&nbsp;&nbsp;&nbsp;</th>
+      <th>
+      <p align="right"><i>09/2016 - Present</i></p> </th>
+    </tr></table>
+
+      <ul>
+        <li>Budgeted $20,000 to hire musical performers/ promotional items/ catering/ etc.
+        <li>Scheduled executive board meetings and office hours.
+        <li>Booked approximately 30 plus artists and vendors.
+        <li>Micromanaged the delegation and fluency of the organization in order to speed up growth of committee and its events.
+      </ul>
+
+    <p align="left"><b>Music Affiliations</b> </p>
+    <!--may need to edit spacing in Affiliations section-->
+
+        <ul>
+          <li>West Milford Highlander Jazz Ensemble &nbsp; (<i>11/2012 – 06/2016</i>)
+          <li>West Milford Highlander Marching Band/Bagpipe Corp &nbsp; (<i>09/2012 – 06/2016</i>)
+          <li>Claddagh Pipe Band &nbsp; (<i>09/2012 – Present</i>)
+          <li>Frost Band of the Hour &nbsp; (<i>08/2016 – 02/2017</i>)
+          <li>Frost Classical Guitar Ensemble(s) &nbsp; (<i>08/2016 – Present</i>)
+        </ul>
+
+  <h3> <p align="left"><b>WORK EXPERIENCE</b> </p> </h3>
+  <hr>
+  <!--Section with the most table alignment/positioning conflicts-->
+
+    <table>
+      <tr>
+        <th align="left"><b>Campbell Exteriors, Oak Ridge, NJ</b>
+         &nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;
+        </th>
+        <th align="right"><i>07/2014 – Present</i> </th>
+      </tr>
+    </table>
+
+    <p align="left">Laborer, Office Assistant</p>
+
+<!-- dont fuck up-->
+
+      <ul>
+        <li>Organized the handling of all roofing, siding, trim materials.
+        <li>Maintained facilities for construction.
+        <li>Organized and balanced all storewide daily sales and finances.
+      </ul>
+
+      <table>
+        <tr>
+          <th align="left"><b>AIT Glass Works, Rockaway, NJ</b>
+           &nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;
+          </th>
+          <th align="right"><i>12/2014 – Present</i> </th>
+        </tr>
+      </table>
+
+    <p align="left">Quality Control</p>
+
+      <ul>
+        <li>Insured quality of all manufactured goods including surgical class.
+        <li>Worked with client relations to communicate with clients about packaging and delivery.
+      </ul>
+
+      <table>
+        <tr>
+          <th align="left"><b>Jersey Shore Music Festival, Seaside, NJ</b>
+           &nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;
+          </th>
+          <th align="right"><i>05/2017</i> </th>
+        </tr>
+      </table>
+
+    <p align="left">Assistant Audio Technician and Stage Hand</p>
+
+      <ul>
+        <li>Organized and handled all set up and breakdown of each performance.
+        <li>Responsible for sound checks and live mixes of each performing ensemble.
+      </ul>
+
+      <table>
+        <tr>
+          <th align="left"><b>Mountain Creek Resort, Vernon, NJ</b>
+           &nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;
+          </th>
+          <th align="right"><i>12/2014 – 02/2015</i> </th>
+        </tr>
+      </table>
+
+    <p align="left">Superstars Race Program Instructor</p>
+
+      <ul>
+        <li>Taught Children ages 5-10 the fundamental skills of ski racing.
+        <li>Responsible for the development of their athletic abilities.
+        <li>Maintained a safe and encouraging environment for students.
+      </ul>
+
+  <h3> <p align="left"><b>SKILLS & COURSEWORK</b> </p> </h3>
+  <hr>
+
+    <p align="left"><b>Technical Skills:</b> Proficient in Microsoft Office, Mediately proficient in Logic Pro X/Finale/Pro Tools 9 </p>
+    <p align="left"><b>Training:</b> Master Classes with David Russel, Meng Su, Grisha Goryachev. </p>
 
 </body>
 </html>
+
+
+
+
+<!-- Proper html document setup (10 Points)
+Use meta author and description tags (10 Points)
+Using heading tags for your different sections (10 Points)
+Add a comment (10 Points)
+Address tag (You can use a fake or school address) (5 Points)
+Create a table (10 Points)
+Ordered or unordered list (10 Points)
+2 links (a tags) (10 Points)
+2 italics or bold tags (10 Points)
+At least one image (10 Points)
+Resume Styling (5 Points)-->
