--- a/a3/index.html
+++ b/a3/index.html
@@ -3,9 +3,187 @@
 
   <head>
     <title>Assignment 3: </title>
+    <meta name="description" content="This is important because...jobs and stuff" />
+    <meta name="author" content="anonymous" />
+    <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+    <!-- Reset link-->
+
+    <link href="https://fonts.googleapis.com/css?family=Charmonman" rel="stylesheet">
+    <!-- linking Google fonts-->
+
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <!-- Link between css and html-->
+
+<!-- dont fuck up the signal flow from directories: index.html has to go to assets directory first then follow regular path forward-->
   </head>
 
+
 <body>
+  <header>
+  <h1 id="name">Bobby Campbell
+    </h1>
+
+  <div id="TheBoys">
+  </div>
+
+<br>
+
+  <address>
+    <a class="Link" href="https://www.bcampbellmusic.com/">www.bcampbellmusic.com</a> | 862-377-4324 |
+
+    <a class="Link" href="mailto:bobbycampbell.music@gmail.com">bobbycampbell.music@gmail.com </a>
+  </address>
+
+  <!-- create local links later for completion of assignment -->
+
+</header>
+
+<br>
+<br>
+<br>
+
+  <h3> EDUCATION </h3>
+
+<div class="sections">
+  <div class="grid-container">
+    <div class="grid-item"> <p class="titles"> University of Miami: Frost School of Music, Coral Gables, Florida | GPA: 3.981 </p></div>
+    <div class="grid-item"> <p class="titles" align=right> Graduation:&nbsp;05/2020</p></div>
+  </div>
+
+
+
+<br>
+
+
+  <!-- add id or class to bolded <p> tags that are title -->
+
+  <p id="major"> Bachelor of Music Candidate </p>
+  <p id="info"> Media Writing and Production, Performance Certificate in Classical Guitar, Minor in Music Business </p>
+
+<!-- Review later for CSS alignment/positioning for dates on same horizontal line-->
+<br>
+
+  <ul class="test">
+    <li class="bullet-tags"> Honors: </li>
+    President’s Music Scholarship, Recipient of Jazz Solo Award, Lakeland Bank Scholarship, Semper Fidelis Award for Musical Excellence.
+    <li class="bullet-tags">Relevant Coursework:</li>
+    <p> Wrote/Recorded/Produced original works mirroring/emulating the compositional styles and recording techniques of musical decades from the 1950’s to 2000’s and current popular music. </p>
+    <li class="bullet-tags"> Guitar Instruction: </li>
+    <p> Carol Hamersma (05/2014- 10/2015), Maestro Rafael Padron (09/2016- Present) </p>
+  </ul>
+</div>
+
+<br>
+
+  <h3> ACTIVITIES/AFFILIATIONS
+  </h3>
+
+
+
+    <p class="titles"> Hurricane Productions: Patio Jams, University of Miami </p>
+
+<!-- dont fuck this up-->
+
+  <p class="titles"> Patio Jams Chair
+        <i>09/2016 - Present</i></p>
+    <ul>
+      <li>Budgeted $20,000 to hire musical performers/ promotional items/ catering/ etc.
+      <li>Scheduled executive board meetings and office hours.
+      <li>Booked approximately 30 plus artists and vendors.
+      <li>Micromanaged the delegation and fluency of the organization in order to speed up growth of committee and its events.
+    </ul>
+
+  <p class="titles"> Music Affiliations </p>
+
+
+    <ul>
+      <li>West Milford Highlander Jazz Ensemble (<i>11/2012 – 06/2016</i>)
+      <li>West Milford Highlander Marching Band/Bagpipe Corp &nbsp; (<i>09/2012 – 06/2016</i>)
+      <li>Claddagh Pipe Band &nbsp; (<i>09/2012 – Present</i>)
+      <li>Frost Band of the Hour &nbsp; (<i>08/2016 – 02/2017</i>)
+      <li>Frost Classical Guitar Ensemble(s) &nbsp; (<i>08/2016 – Present</i>)
+    </ul>
+
+    <!-- requires grid line up and sheeting (fix all the bullshit) -->
+
+<br>
+
+  <h3> WORK EXPERIENCE </h3>
+
+
+  <!--Section with the most table alignment/positioning conflicts-->
+
+
+<p class="titles"> Campbell Exteriors, Oak Ridge, NJ
+        <i>07/2014 – Present</i> </p>
+
+<!-- dont fuck up-->
+
+      <ul class="lists">Laborer, Office Assistant
+        <li>Organized the handling of all roofing, siding, trim materials.
+        <li>Maintained facilities for construction.
+        <li>Organized and balanced all storewide daily sales and finances.
+      </ul>
+
+<br>
+
+  <p class="titles"> AIT Glass Works, Rockaway, NJ
+      <i>12/2014 – Present</i> </p>
+
+
+      <ul class="lists"> Quality Control
+        <li>Insured quality of all manufactured goods including surgical class.
+        <li>Worked with client relations to communicate with clients about packaging and delivery.
+      </ul>
+
+<br>
+
+    <p class="titles"> Jersey Shore Music Festival, Seaside, NJ
+        <i>05/2017</i> </P>
+
+      <ul class="lists"> Assistant Audio Technician and Stage Hand
+        <li>Organized and handled all set up and breakdown of each performance.
+        <li>Responsible for sound checks and live mixes of each performing ensemble.
+      </ul>
+
+      <br>
+
+    <p class="titles"> Mountain Creek Resort, Vernon, NJ
+           <i>12/2014 – 02/2015</i>
+
+      <ul class="lists"> Superstars Race Program Instructor
+        <li>Taught Children ages 5-10 the fundamental skills of ski racing.
+        <li>Responsible for the development of their athletic abilities.
+        <li>Maintained a safe and encouraging environment for students.
+      </ul>
+
+<br>
+
+  <h3> SKILLS & COURSEWORK </h3>
+
+
+    <p> Technical Skills: Proficient in Microsoft Office, Mediately proficient in Logic Pro X/Finale/Pro Tools 9
+    <p align="left"><b>Training:</b> Master Classes with David Russel, Meng Su, Grisha Goryachev. </p>
 
 </body>
 </html>
+
+<!-- Style your Resume using CSS styling elements. Do not use CSS Grid or worry about making the page responsive.
+
+Create 2 links
+Set the color of the links and remove the underline. - 10 points
+Style :hover effect. - 10 points
+Use one or two custom fonts - 10 points
+Make sure you use an external stylesheet and link it to your index.html page. - 10 Points
+Style 2 elements (ie a, p, b, address, etc) - 10 points
+Create and use 2 id - 20 points
+Create and use 4 classes, use the classes more than once - 20 points
+Make sure you validate your work I shouldn't find minor errors like semicolons missing or missing braces use a validator (css validator, html validator). Here is one example site you can put your code on to validate  http://csslint.net/ - 5 points
+Use one new css tag you have not used before in class and tell me with a comment the tag you are using inside the css file - 5 points
+
+TAKE NOTE: Make sure to link the reset css style sheet before applying your style.css file. Keep in mind that when you apply the reset.css, you will lose all default browser styling and will need to manually add styling to ensure that it translates across all devices. One example can be seen with the bullets on your list tags disappearing after applying reset css. To get the bullets to go again you could style as follows:
+ul{
+  list-style-type: disc;
+   list-style-position: inside;
+}
+-->
