--- a/a4/index.html
+++ b/a4/index.html
@@ -2,10 +2,151 @@
 <html>
 
   <head>
-    <title>Assignment 4: </title>
+
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+    <!--reset link -->
+
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
+
+
+    <link rel="stylesheet" href="assets/css/style.css">
+    <!--<link rel="stylesheet" href="./responsive-START.css">-->
+
+    <title>Assignment 4: Bobby Campbell </title>
+
   </head>
 
 <body>
 
+  <div class="wrapper">
+    <div class="top">
+      <header class="hero">
+        <div class="frosted">
+           <h1>Bobby Campbell</h1>
+           <br>
+           <p>Guitarist | Bagpiper | Composer</p>
+        </div>
+      </header>
+
+    </div>
+
+<!-- Nav Section -->
+  <main
+    <nav class="menu">
+      <ul id="menu-list">
+          <a href="index.html"><li> HOME </li></a>
+          <a href="guitar.html"><li> Guitar </li></a>
+          <a href="bagpipes.html"><li> Bagpipes </li></a>
+      </ul>
+    </nav>
+  </main>
+
+    <section class="features">
+      <div class="feature">
+        <span class="icon"><i class="fa fa-music" aria-hidden="true"></i></span>
+        <h3> Performances </h3>
+        <p>Secret Summer Tour Details: Coming Soon...</p>
+      </div>
+      <div class="feature">
+        <span class="icon"><i class="fa fa-pen"></i></span>
+        <h3>Compositions</h3>
+        <p>Get a sneak peak of Bobby's up and coming LP entitled "Beyond the Rhythm".</p>
+      </div>
+      <div class="feature">
+        <span class="icon"><i class="fas fa-dollar-sign"></i></span>
+        <h3>Rates</h3>
+        <p>For performance or composition inquires. Feel free to contact via social media or toll-free at 862-377-4324</p>
+      </div>
+      <div class="feature">
+        <span class="icon"><i class="fa fa-hashtag"></i></span>
+        <h3>Contact</h3>
+        <p>To keep up to date with all performance and music related materials please follow @bobbycampbell.</p>
+      </div>
+    </section>
+
+    <section class="about">
+       <img src="https://dt7v1i9vyp3mf.cloudfront.net/styles/news_large/s3/imagelibrary/s/stevealbini2controlroom-ah7mw2IU5lQkQvh9ptsfei.w2x3EoF83.jpg" alt="">
+      <div class="about__details">
+        <h2>LATEST NEWS</h2>
+        <br>
+        <p>Bobby Campbell in Frost School of Music Classical Guitar Department</p>
+        <br>
+        <p>Finishing up his freshman year at the University of Miami Frost School of Music where Bobby Campbell recently had the opportunity to perform with fellow members of the Frost Classical Guitar Studio along with others from the Florida Guitar Foundation. </p>
+        <br>
+        <button>Learn More →</button>
+      </div>
+    </section>
+
+
+   <section class="gallery">
+      <h2> Media </h2>
+          <img src="assets/images/IMG_7358.jpg">
+          <img src="assets/images/IMG_7112.jpg">
+          <img src="assets/images/IMG_7154.jpg">
+          <img src="assets/images/IMG_7209.jpg">
+          <img src="assets/images/IMG_7267.jpg">
+          <img src="assets/images/IMG_7304.jpg">
+          <img src="assets/images/IMG_7391.jpg">
+          <img src="assets/images/IMG_7466.jpg">
+
+    </section>
+  </div>
+
+  <footer>
+      <p>© 2018 BC3Entertainment</p>
+      <ul>
+          <li>About</li>
+          <li>Blog</li>
+          <li>Contact</li>
+      </ul>
+  </footer>
+
 </body>
+
+
 </html>
+
+
+<!--
+For this assignment, you will be asked to create a personal site. You must create a 3-page minimum responsive website about a special topic. Choose a hobby, cause, or any topic you might be interested in. Use media queries to create a dynamic multi-column layout. Make sure to put all of your work inside of the a4 folder.
+
+PLANNING: (10 Points)
+
+     -  Create a wireframe/design drawing - One per page for every site page & size (10 Points)
+
+     - All pages must of relevant researched content
+
+NAVIGATION: (30 Points)
+
+     - Min. 1 layout vertical view. Bonus Extra 10 points for 2nd layout use: (print stylesheet, horizontal view stylesheet).
+
+3 LINKED PAGES (75 Points)
+
+     - 3 linked pages
+
+     - One of the pages needs to be uniquely styled ie: gallery page
+
+EXTERNAL STYLESHEET (80 Points)
+
+     - Use Media Queries (small, medium & large sizes)
+
+     - Use An external stylesheet for all pages
+
+HTML/CSS (5 Points)
+
+     - Must user header, main & footer tags
+
+     - Use properly written HTML & CSS syntax. Use an online validator to check your code.
+
+     - Provide Styling where appropriate (ie. Anchor tag hover effect)
+
+HTML/CSS - (5 points)
+Must Used header, main, footer tags
+Properly written use HTML and CSS validator to check your code.
+Styles where appropriate
+
+Any assignment turned in late will be docked 10 points. Assignments will not be accepted past 1 week from the due date.
+-->
