--- a/a5/index.html
+++ b/a5/index.html
@@ -2,10 +2,46 @@
 <html>
 
   <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+    <!--reset link -->
+
+  <!--  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
+    --->
+<!-- fontawesome link -->
+
+    <link rel="stylesheet" href="assets/css/style.css">
+    <!--<link rel="stylesheet" href="./responsive-START.css">-->
+
     <title>Assignment 5: </title>
   </head>
 
 <body>
+  <script>
+    document.write("Hello, World!");
+  </script>
 
 </body>
 </html>
+<!--
+Create a one how-to html page. Create a recipe page, or how to make something, i.e. craft. Your page should have a minimum of 5 steps. Take images or video. Use organizational tags and css to organize and style your page. Include ingredients, directions, and Tips.
+
+Use jQuery to show and hide steps(jquery components can help as well check accordion component etc.) or images. You can use tabs example to cycle through different steps. You can also use the .html() or .css function to change or augment your html.
+
+You need to have a minimum of :
+
+JS Logic (Use If / else Statement, for loop, & functions) (30 points)
+
+Minimum: 1 click, 1 mouseover and 1 mouseleave event  (30 points)
+
+1 show/hide events (10 points)
+
+1 add html() (10 points)
+
+1 add method that changes an elements style. (10 points)
+
+Creativity and project cohesiveness (10 points)
+
+5 Points Extra credit for anyone who figures how to add an additional JS Library not already mentioned in class.
