--- a/a5/index.html
+++ b/a5/index.html
@@ -15,13 +15,64 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <!--<link rel="stylesheet" href="./responsive-START.css">-->
 
-    <title>Assignment 5: </title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
+
+    <title> Assignment 5: </title>
   </head>
 
 <body>
-  <script>
-    document.write("Hello, World!");
-  </script>
+
+  <div class="container">
+    <div class= header>
+    <h1> WELCOME TO HOW TO ROLL A CIGARETTE </h1>
+  <!--  <a img="cig.jpg"></a> --->
+    </div>
+
+    <nav class="choices 1">
+      <h1> 1. Choose your tobacco </h1>
+      <br>
+        <button class="button1"> American Spirits </button>
+        <button class="button2"> Marlboro </button>
+    </nav>
+
+
+    <nav class="choices 2">
+      <h1> 2. Choose Papers </h1>
+      <br>
+        <button class="button3"> OCB </button>
+        <button class="button4"> RAW </button>
+    </nav>
+
+    <div class="buttondiv">
+        <button class="prompt"> Filter Choice </button>
+        <p class="userText"></p>
+    </div>
+
+    <nav class="choices 3">
+      <h1> 4. Forming Tobacco </h1>
+      <br>
+      <button class="button5"> Click to show steps </button>
+    </nav>
+
+    <nav class="choices 4">
+      <h1> 5. Rolling the cig </h1>
+      <br>
+      <button class="button6"> Click to show steps </button>
+    </nav>
+
+    <nav class="choices 5">
+      <h1> making the seal </h1>
+      <br>
+      <button class="button7"> Click to show steps </button>
+    </nav>
+
+  </div>
+
+
+
+
+<script src="assets/js/java.js"> </script>
 
 </body>
 </html>
@@ -29,6 +80,10 @@
 Create a one how-to html page. Create a recipe page, or how to make something, i.e. craft. Your page should have a minimum of 5 steps. Take images or video. Use organizational tags and css to organize and style your page. Include ingredients, directions, and Tips.
 
 Use jQuery to show and hide steps(jquery components can help as well check accordion component etc.) or images. You can use tabs example to cycle through different steps. You can also use the .html() or .css function to change or augment your html.
+
+!!!!* https://www.w3schools.com/jquery/jquery_examples.asp
+*!!!!
+
 
 You need to have a minimum of :
 
@@ -45,3 +100,4 @@ Minimum: 1 click, 1 mouseover and 1 mouseleave event  (30 points)
 Creativity and project cohesiveness (10 points)
 
 5 Points Extra credit for anyone who figures how to add an additional JS Library not already mentioned in class.
+--> 
