--- a/a6/index.html
+++ b/a6/index.html
@@ -9,3 +9,37 @@
 
 </body>
 </html>
+
+<!--
+Conduct research, choose and implement a jQuery plugin. Create a one page site about a place you would like to visit. You must apply the plugin on a minimum of 5 Elements or areas on your site. (Work in class lab and home to complete the assignment)
+
+Name your site vacation folder
+
+Points:
+
+20 points – Successfully installing/using jQuery Plugin or JS Library
+50 points – 10 points per element used
+30 points – HTML/CSS and Creativity
+Must Haves:
+5 Images of the location (5 points)
+5 item List of landmarks, sightseeing areas, or restaurants with links to websites about landmark (5 points)
+1 Header and Intro paragraph of location (5 points)
+Using CSS Creatively - make changes to css based on user interaction (10 Points)
+Making your site presentable (5 points)
+Extra credit: 10 points for anyone who includes css grid on their site @media (small, medium and large formats). Does not apply for assignments turned in late.
+
+Assignments turned in after the deadline will have a deduction of 10 points to the overall grade.
+
+
+
+JQUERY PLUGIN IDEAS FOR RESEARCHING:
+
+https://www.creativebloq.com/jquery/top-jquery-plugins-6133175
+
+https://speckyboy.com/free-jquery-plugins/
+
+https://tutorialzine.com/2013/04/50-amazing-jquery-plugins
+
+http://www.unheap.com/
+
+-->
