--- a/a5/index.html
+++ b/a5/index.html
@@ -26,22 +26,22 @@
   <div class="container">
     <div class= header>
     <h1> WELCOME TO HOW TO ROLL A CIGARETTE </h1>
-  <!--  <a img="cig.jpg"></a> --->
+    <img class= "pic" src="assets/images/cig.jpg">
     </div>
 
     <nav class="choices 1">
       <h1> 1. Choose your tobacco </h1>
       <br>
-        <button class="button1"> American Spirits </button>
-        <button class="button2"> Marlboro </button>
+        <button class="button1 first"> American Spirits </button>
+        <button class="button2 first"> Marlboro </button>
     </nav>
 
 
     <nav class="choices 2">
       <h1> 2. Choose Papers </h1>
       <br>
-        <button class="button3"> OCB </button>
-        <button class="button4"> RAW </button>
+        <button class="button3 second"> OCB </button>
+        <button class="button4 second"> RAW </button>
     </nav>
 
     <div class="buttondiv">
@@ -53,12 +53,17 @@
       <h1> 4. Forming Tobacco </h1>
       <br>
       <button class="button5"> Click to show steps </button>
+      <p class= "forming"> 1. Stroke the furry wall
+      </p>
     </nav>
 
     <nav class="choices 4">
       <h1> 5. Rolling the cig </h1>
       <br>
       <button class="button6"> Click to show steps </button>
+      <p class= "rolling"> 1. Roll that shit
+
+      </p>
     </nav>
 
     <nav class="choices 5">
@@ -66,6 +71,13 @@
       <br>
       <button class="button7"> Click to show steps </button>
     </nav>
+
+    <nav class="choices">
+      <h1> Recomended brands </h1>
+      <br>
+      <p class="brands"> </p>
+    </nav>
+
 
   </div>
 
@@ -100,4 +112,4 @@ Minimum: 1 click, 1 mouseover and 1 mouseleave event  (30 points)
 Creativity and project cohesiveness (10 points)
 
 5 Points Extra credit for anyone who figures how to add an additional JS Library not already mentioned in class.
---> 
+-->
