--- a/a5/index.html
+++ b/a5/index.html
@@ -53,7 +53,7 @@
       <h1> 4. Forming Tobacco </h1>
       <br>
       <button class="button5"> Click to show steps </button>
-      <p class= "forming"> 1. Stroke the furry wall
+      <p class= "forming"> 1. Stroke the furry tobacco 
       </p>
     </nav>
 
@@ -61,16 +61,12 @@
       <h1> 5. Rolling the cig </h1>
       <br>
       <button class="button6"> Click to show steps </button>
-      <p class= "rolling"> 1. Roll that shit
+      <p class= "rolling"> 1. Tuck and Roll
 
       </p>
     </nav>
 
-    <nav class="choices 5">
-      <h1> making the seal </h1>
-      <br>
-      <button class="button7"> Click to show steps </button>
-    </nav>
+
 
     <nav class="choices">
       <h1> Recomended brands </h1>
