Submitting a6 after medical emergency

--- a/a6/index.html
+++ b/a6/index.html
@@ -1,13 +1,147 @@
 <!DOCTYPE html>
 <html>
 
-  <head>
-    <title>Assignment 6: </title>
-  </head>
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+    <title>Home - Rutgers</title>
+    <meta name="description" content="Explore Rutgers">
+    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Catamaran:100,200,300,400,500,600,700,800,900">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.1.1/aos.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.8.2/css/lightbox.min.css">
+    <link rel="stylesheet" href="assets/css/Lightbox-Gallery.css">
+</head>
 
 <body>
+    <nav class="navbar navbar-dark navbar-expand-lg fixed-top bg-dark navbar-custom">
+        <div class="container"><a class="navbar-brand" href="#">Rutgers Guide</a><button class="navbar-toggler" data-toggle="collapse" data-target="#navbarResponsive"><span class="navbar-toggler-icon"></span></button>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+                <ul class="nav navbar-nav ml-auto">
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="#"></a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="#"></a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
 
+    <header class="masthead text-center text-white" style="height: 100vh;">
+        <div class="masthead-content">
+            <div class="container">
+                <h1 data-aos="fade-down" class="masthead-heading mb-0" style="font-weight: 1000;">Explore Rutgers</h1>
+                <h2 data-aos="fade-up" class="masthead-subheading mb-0" style="font-weight: normal;font-style: italic;">Your Personal Web Guide</h2><a class="btn btn-primary pulse animated infinite btn-xl rounded-pill mt-5" role="button" href="#" id="continueButton" style="background-color: rgb(255,255,255);color: rgb(174,0,0);margin-top: 139px;">Continue</a></div>
+        </div><img src="assets/img/mascot.png" data-aos="fade-up" style="height: 444px;"></header>
+    <section id="section1">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-lg-6 order-lg-2">
+                    <div class="p-5"><iframe allowfullscreen="" frameborder="0" width="100%" height="400" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyBGZWj5k7ulpJHictdoYH_hbkdtP6FV8Ts&amp;q=71+Hamilton+St%2C+New+Brunswick%2C+NJ+08901&amp;zoom=11" data-aos="fade-left"></iframe></div>
+                </div>
+                <div class="col-lg-6 order-lg-1">
+                    <div data-aos="fade-right" class="p-5">
+                        <h2 class="display-4"><strong>Zimmerli Art Museum</strong></h2>
+                        <p>The Zimmerli Art Museum was founded in 1966 as the Rutgers University Art Gallery to celebrate the university’s bicentennial. The gallery was expanded in 1983 and renamed the Jane Voorhees Zimmerli Art Museum in honor of the mother
+                            of Ralph and Alan Voorhees, the major benefactors for the museum’s expansion.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section>
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-lg-6 order-lg-1">
+                    <div class="p-5"><iframe allowfullscreen="" frameborder="0" width="100%" height="400" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyBGZWj5k7ulpJHictdoYH_hbkdtP6FV8Ts&amp;q=105+Joyce+Kilmer+Ave%2C+Piscataway+Township%2C+NJ+08854&amp;zoom=11"
+                            data-aos="zoom-in-down"></iframe></div>
+                </div>
+                <div class="col-lg-6 order-lg-2">
+                    <div data-aos="zoom-in-up" class="p-5">
+                        <h2 class="display-4"><a href="http://www.rutgerscinema.com/en/new-jersey/rutgers/">Rutgers Cinema</a></h2>
+                        <p>Catch a movie with some friends, where all students get discounted tickets! What are you waiting for? We have the latest hits and some great food for you to enjoy.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section>
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-lg-6 order-lg-2">
+                    <div class="p-5"><iframe allowfullscreen="" frameborder="0" width="100%" height="400" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyBGZWj5k7ulpJHictdoYH_hbkdtP6FV8Ts&amp;q=112+Ryders+Ln%2C+New+Brunswick%2C+NJ+08901&amp;zoom=11" data-aos="flip-right"></iframe></div>
+                </div>
+                <div class="col-lg-6 order-lg-1">
+                    <div data-aos="flip-left" class="p-5">
+                        <h2 class="display-4">Rutgers Gardens</h2>
+                        <p>Take a hike, have a picnic, and enjoy one of the largest free gardens in New Jersey. Spread out over more than 180 acres,&nbsp;<a href="http://rutgersgardens.rutgers.edu/">Rutgers Gardens</a>&nbsp;is open seven days a week, 365
+                            days a year.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section>
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-lg-6 order-lg-1">
+                    <div class="p-5"><iframe allowfullscreen="" frameborder="0" width="100%" height="400" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyBGZWj5k7ulpJHictdoYH_hbkdtP6FV8Ts&amp;q=+777+Hoes+Ln+W%2C+Piscataway+Township%2C+NJ+08854&amp;zoom=11" data-aos="fade-up-left"></iframe></div>
+                </div>
+                <div class="col-lg-6 order-lg-2">
+                    <div data-aos="fade-up-left" class="p-5">
+                        <h2 class="display-4"><a href="http://www.rutgerscinema.com/en/new-jersey/rutgers/">Rutgers Golf Course</a></h2>
+                        <p>Over 6,300 yards in length, the picturesque, tree-lined, PGA sanctioned course is a par 71 and offers a challenging layout with four teeing areas per hole. Highlights include narrow fairways, fast greens, and water hazards on nine
+                            holes.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section>
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-lg-6 order-lg-2">
+                    <div class="p-5"><iframe allowfullscreen="" frameborder="0" width="100%" height="400" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyBGZWj5k7ulpJHictdoYH_hbkdtP6FV8Ts&amp;q=85+George+Street%2C+New+Brunswick%2C+NJ+08901&amp;zoom=11" data-aos="slide-left"></iframe></div>
+                </div>
+                <div class="col-lg-6 order-lg-1">
+                    <div data-aos="slide-right" class="p-5">
+                        <h2 class="display-4"><strong>Bettenbender Plaza</strong></h2>
+                        <p>An outdoor space dedicated in 2002 to honor John&nbsp;Bettenbender, the founding dean of the Mason Gross School of the Arts. The square is a gathering spot for students between classes, the site of impromptu performances and a
+                            summer setting for evening events.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <div data-aos="fade-up" class="photo-gallery">
+        <div class="container">
+            <div class="intro">
+                <h2 class="text-center">Rutgers Gallery</h2>
+                <p class="text-center">See what's going on campus</p>
+            </div>
+            <div class="row photos" data-aos="flip-down" data-aos-delay="100">
+                <div class="col-sm-6 col-md-4 col-lg-3 item" data-bs-hover-animate="jello"><a href="assets/img/desk.jpg" data-lightbox="photos"><img class="img-fluid" src="assets/img/desk.jpg"></a></div>
+                <div class="col-sm-6 col-md-4 col-lg-3 item" data-bs-hover-animate="jello"><a href="assets/img/building.jpg" data-lightbox="photos"><img class="img-fluid" src="assets/img/building.jpg"></a></div>
+                <div class="col-sm-6 col-md-4 col-lg-3 item" data-bs-hover-animate="jello"><a href="assets/img/loft.jpg" data-lightbox="photos"><img class="img-fluid" src="assets/img/loft.jpg"></a></div>
+                <div class="col-sm-6 col-md-4 col-lg-3 item" data-bs-hover-animate="jello"><a href="assets/img/building.jpg" data-lightbox="photos"><img class="img-fluid" src="assets/img/building.jpg"></a></div>
+                <div class="col-sm-6 col-md-4 col-lg-3 item" data-bs-hover-animate="jello"><a href="assets/img/loft.jpg" data-lightbox="photos"><img class="img-fluid" src="assets/img/loft.jpg"></a></div>
+                <div class="col-sm-6 col-md-4 col-lg-3 item" data-bs-hover-animate="jello"><a href="assets/img/desk.jpg" data-lightbox="photos"><img class="img-fluid" src="assets/img/desk.jpg"></a></div>
+            </div>
+        </div>
+    </div>
+    <footer class="py-5 bg-black">
+        <div class="container">
+            <p class="text-center text-white m-0 small">Copyright&nbsp;© Rutgers 2018</p>
+        </div>
+    </footer>
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src="assets/js/bs-animation.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.1.1/aos.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.8.2/js/lightbox.min.js"></script>
+    <script src="assets/js/script.js"></script>
 </body>
+
 </html>
 
 <!--
